feat(02.1-02): update sync result UI and add 8 unit tests for AI-first flow
- Update sync-result.html template: show gwsValidatedUsers, externalAccounts,
  suspendedAccounts, revokedAccounts; conditional archivedLegacyUsers line;
  remove offboardedUsers reference
- Update SyncController fallback message with new field references
- Rewrite SyncOrchestratorTest with 8 comprehensive test cases:
  1. AI-first sync with Claude+Cursor seats and GWS validation
  2. Parallel seat fetching with one tool failure
  3. GWS validation - email not found, no user created
  4. GWS unavailable - skips validation gracefully
  5. Disappeared seats marked suspended via AccountLinkingService
  6. Legacy users without AI seats archived as INACTIVE
  7. GitHub Copilot seats matched by github_username enrichment
  8. Empty tools - sync completes with zero counts

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>